fix the gap between the home cards

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -28,7 +28,7 @@
     padding: 14%;
     display: flex;
     flex-wrap: wrap;
-    gap: 100px;
+    gap: 50px;
     justify-content: center;
     z-index: 2;
 }
